--- a/dev/markap.html
+++ b/dev/markap.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-lg-6 col-xl-4">
                 <h3>6. Font styles(bold, italic, selection, link in content)</h3>
-                <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong> Non <b>exercitationem</b> fugiat, eius ipsa <i> dolores voluptate nostrum eos illum</i> perspiciatis sequi! Lorem ipsum dolor,<em> sit amet consectetur adipisicing elit.</em> Quis, atque.</div>
+                <strong>Lorem ipsum dolor sit amet <a href="#">consectetur</a> adipisicing elit.</strong> Non <b>exercitationem</b> fugiat, eius ipsa <i> dolores voluptate nostrum eos illum</i> perspiciatis sequi! Lorem ipsum dolor,<em> sit amet consectetur adipisicing elit.</em> Quis, atque.</div>
             <div class="col-lg-6 col-xl-4">
                 <h3>6. Font-weight</h3>
                 <button class="btn btn-primary btn-large">primary</button>
@@ -59,9 +59,9 @@
             </div>
             <div class="col-lg-6 col-xl-4">
                 <ul>
-                    <li><a href="#">sign up</a></li>
-                    <li><a href="#">sign in</a></li>
-                    <li><a href="#">forgot password</a></li>
+                    <li><a href="sign-up.html">sign up</a></li>
+                    <li><a href="sign-in.html">sign in</a></li>
+                    <li><a href="forgot-password.html">forgot password</a></li>
                 </ul>
                 <ul>
                     <li> 
@@ -117,6 +117,17 @@
                     <li><a href="404.html">404</a></li>
                 </ul>
             </div>
+            <div class="col-lg-6 col-xl-4">
+               
+
+                <h1>Lorem ipsum.</h1>
+                <h2>Lorem ipsum.</h2>
+                <h3>Lorem ipsum.</h3>
+                <h4>Lorem ipsum.</h4>
+                <h5>Lorem ipsum.</h5>
+                <h6>Lorem ipsum.</h6>
+            </div>
+            <div class="col-lg-6 col-xl-4"></div>
             <div class="col-lg-6 col-xl-4"></div>
          </div>
     </div>
