markap: creat form constructor(desktop)

--- a/dev/forgot-password.html
+++ b/dev/forgot-password.html
@@ -21,10 +21,13 @@
             <input id="email" type="email">
         </div>
         
- 
-        <button type="submit" class="btn btn-primary btn-large">відновити пароль</button>
-        <div>ще не маєте акаунта Onebit? <a href="#">створити акаунт</a></div>
-        <a href="#">увійти</a>
+        <div class="btn-row">
+            <button type="submit" class="btn btn-primary btn-large">відновити пароль</button>
+        </div>
+        <div class="template-form__questions">
+            <div>ще не маєте акаунта Onebit? <a href="#">створити акаунт</a></div>
+            <a href="#">увійти</a>
+        </div>
     </form>
  
 </main>
