--- a/dev/sign-in.html
+++ b/dev/sign-in.html
@@ -21,9 +21,13 @@
             <label for="password">пароль</label>
             <input id="password" type="password">
         </div>
-        <button  type="submit" class="btn btn-primary btn-large">увійти в акаунт</button>
-        <div>ще не маєте акаунта Onebit? <a href="#">створити акаунт</a></div>
-        <a href="#">забув пароль</a>
+        <div class="btn-row">
+            <button  type="submit" class="btn btn-primary btn-large">увійти в акаунт</button>
+        </div>
+        <div class="template-form__questions">
+            <span>ще не маєте акаунта Onebit? <a href="#">створити акаунт</a></span>
+            <a href="#">забув пароль</a>
+        </div>
     </form>
  
 </main>
