--- a/dev/sign-up.html
+++ b/dev/sign-up.html
@@ -45,8 +45,10 @@
             <input id="consent" type="checkbox">
             <label for="consent">Я погоджуюся з <a href="#">умовами користування</a> та <a href="#">політикою конфіденційності</a></label>
         </div>
-        <button type="submit" class="btn btn-primary btn-large">отправить</button>
-        <div>вже маєте акаунт Onebit? <a href="#">увійти</a></div>
+        <div class="btn-row">
+            <button type="submit" class="btn btn-primary btn-large">отправить</button>
+        </div>
+        <div class="template-form__questions">вже маєте акаунт Onebit? <a href="#">увійти</a></div>
     </form>
  
 </main>
