build: added jquary and jquery.mask

--- a/dev/sign-up.html
+++ b/dev/sign-up.html
@@ -25,8 +25,8 @@
             </div>
         </div>
         <div class="input-box">
-            <label for="tel">номер телефону</label>
-            <input id="tel" type="tel">
+            <!-- <label for="tel">номер телефону</label> -->
+            <input id="tel" type="tel" placeholder="Введите свой номер телефона">
         </div>
         <div class="input-box">
             <label for="email">email</label>
