feat: show/hide password field

--- a/dev/forgot-password.html
+++ b/dev/forgot-password.html
@@ -6,7 +6,7 @@
     </div>
     
     <form class="template-form">
-        <button class="btn btn-profile">
+        <button id="history-back" class="btn btn-profile" type="button">
             <svg>
                 <use href="#arrow-back"></use>
             </svg>
