--- a/dev/sign-up.html
+++ b/dev/sign-up.html
@@ -6,7 +6,7 @@
     </div>
     
     <form class="template-form">
-        <button class="btn btn-profile">
+        <button id="history-back" class="btn btn-profile" type="button">
             <svg>
                 <use href="#arrow-back"></use>
             </svg>
@@ -26,7 +26,7 @@
         </div>
         <div class="input-box">
             <!-- <label for="tel">номер телефону</label> -->
-            <input id="tel" type="tel" placeholder="Введите свой номер телефона">
+            <input id="tel" type="tel" placeholder="+38(000)-00-00-000">
         </div>
         <div class="input-box">
             <label for="email">email</label>
@@ -37,8 +37,8 @@
             <input id="telegram" type="text">
         </div>
         <div class="input-box">
-            <label for="password">пароль</label>
-            <input id="password" type="password">
+            <label for="password">пароль</label>  
+            <input id="password" type="password" placeholder="Password">
         </div>
 
         <div class="conrol-box">
