style: added PixelPerfect styles for  constructor form

--- a/dev/sign-up.html
+++ b/dev/sign-up.html
@@ -46,7 +46,7 @@
             <label for="consent">Я погоджуюся з <a href="#">умовами користування</a> та <a href="#">політикою конфіденційності</a></label>
         </div>
         <div class="btn-row">
-            <button type="submit" class="btn btn-primary btn-large">отправить</button>
+            <button type="submit" class="btn btn-primary btn-large">зареєструватися</button>
         </div>
         <div class="template-form__questions">вже маєте акаунт Onebit? <a href="#">увійти</a></div>
     </form>
