--- a/dev/sign-in.html
+++ b/dev/sign-in.html
@@ -25,8 +25,8 @@
             <button  type="submit" class="btn btn-primary btn-large">увійти в акаунт</button>
         </div>
         <div class="template-form__questions">
-            <span>ще не маєте акаунта Onebit? <a href="#">створити акаунт</a></span>
-            <a href="#">забув пароль</a>
+            <span>ще не маєте акаунта Onebit? <a href="sign-up.html">створити акаунт</a></span>
+            <a href="forgot-password.html">забув пароль</a>
         </div>
     </form>
  
