--- a/dev/sign-up.html
+++ b/dev/sign-up.html
@@ -48,7 +48,7 @@
         <div class="btn-row">
             <button type="submit" class="btn btn-primary btn-large">зареєструватися</button>
         </div>
-        <div class="template-form__questions">вже маєте акаунт Onebit? <a href="#">увійти</a></div>
+        <div class="template-form__questions">вже маєте акаунт Onebit? <a href="sign-in.html">увійти</a></div>
     </form>
  
 </main>
