--- a/dev/forgot-password.html
+++ b/dev/forgot-password.html
@@ -25,8 +25,8 @@
             <button type="submit" class="btn btn-primary btn-large">відновити пароль</button>
         </div>
         <div class="template-form__questions">
-            <div>ще не маєте акаунта Onebit? <a href="#">створити акаунт</a></div>
-            <a href="#">увійти</a>
+            <div>ще не маєте акаунта Onebit? <a href="sign-up.html">створити акаунт</a></div>
+            <a href="sign-in.html">увійти</a>
         </div>
     </form>
  
