style: added template style to dropdown-menu

--- a/dev/forgot-password.html
+++ b/dev/forgot-password.html
@@ -2,7 +2,9 @@
 @@include('templates/header.html')
 <main class="wrapper page-login">
     <div class="column-logo">
-        <img src="assets/img/logo.svg" alt="logo">
+        <a href="index.html">
+            <img src="assets/img/logo-dark.svg" alt="logo">
+        </a>
     </div>
     
     <form class="template-form">
