style: footer mobile done

--- a/dev/index.html
+++ b/dev/index.html
@@ -5,6 +5,12 @@
     @@include('templates/advantages.html')
     @@include('templates/steps.html')
     @@include('templates/cityes.html')
+
+
+    <!-- @@include('templates/faq.html') -->
+
+
+     @@include('templates/questions.html')  
  
 </main>
 @@include('templates/footer.html')
