feat: creat accordion desktop

--- a/dev/index.html
+++ b/dev/index.html
@@ -6,12 +6,9 @@
     @@include('templates/steps.html')
     @@include('templates/cityes.html')
 
-
-    <!-- @@include('templates/faq.html') -->
-
-
-     @@include('templates/questions.html')  
+    @@include('templates/faq.html')
  
+    @@include('templates/questions.html')  
 </main>
 @@include('templates/footer.html')
  
