--- a/dev/index.html
+++ b/dev/index.html
@@ -5,8 +5,9 @@
     @@include('templates/advantages.html')
     @@include('templates/steps.html')
     @@include('templates/cityes.html')
-
     @@include('templates/faq.html')
+    
+    @@include('templates/review.html')
  
     @@include('templates/questions.html')  
 </main>
