build: creat footer-assets.html

--- a/dev/sign-in.html
+++ b/dev/sign-in.html
@@ -1,5 +1,4 @@
 @@include('templates/head.html')
-@@include('templates/header.html')
 <main class="wrapper page-login">
     <div class="column-logo">
         <a href="index.html">
@@ -34,4 +33,5 @@
  
 </main>
 @@include('templates/footer.html')
+@@include('templates/footer-assets.html')
  
