--- a/dev/markap.html
+++ b/dev/markap.html
@@ -72,7 +72,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">Home ✔</a>
                         <ul>
                             <li><a href="services.html">services</a>
                                 <ul>
