feat: creat exchange pages

--- a/dev/markap.html
+++ b/dev/markap.html
@@ -66,45 +66,46 @@
             </div>
             <div class="col-lg-6 col-xl-4">
                 <ul>
-                    <li><a href="sign-up.html">sign up</a></li>
-                    <li><a href="sign-in.html">sign in</a></li>
-                    <li><a href="forgot-password.html">forgot password</a></li>
+                    <li><a href="sign-up.html">sign up ✔</a></li>
+                    <li><a href="sign-in.html">sign in ✔</a></li>
+                    <li><a href="forgot-password.html">forgot password ✔</a></li>
                 </ul>
                 <ul>
                     <li>
                         <a href="index.html">Home ✔</a>
                         <ul>
-                            <li><a href="services.html">services</a>
+                            <li><a href="services-main.html">services-main ✔</a>
                                 <ul>
                                     <li>
-                                        <a href="service-1.html">translactions in Ukraine</a>
+                                        <a href="services-1.html">translactions in Ukraine ✔</a>
                                         <ul>
                                             <li><a href="translactions-in-ukraine.html">translactions in Ukraine_authorized</a></li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="service-2.html">world transactions_authorized</a>
+                                        <a href="service-2.html">world transactions_authorized ✔</a>
                                         <ul>
                                             <li><a href="world-transactions.html">world transactions_authorized</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="service-3.html">swift transactions_authorized</a></li>
+                                    <li><a href="service-3.html">swift transactions_authorized ✔</a></li>
                                     <li>
-                                        <a href="service-4.html">crypto transactions_authorized</a>
+                                        <a href="service-4.html">crypto transactions_authorized ✔</a>
                                         <ul>
                                             <li><a href="crypto-fiat.html">top crypto-fiat pair_authorized</a></li>
-                                            <li><a href="exchange-application.html">exchange application_authorized</a></li>
+                                            <li><a href="exchange-application.html">exchange application_authorized ✔</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="service-5.html">yuan transactions to China_authorized</a></li>
+                                    <li><a href="service-5.html">yuan transactions to China_authorized ✔</a></li>
                                 </ul>
                             </li>
-                            <li><a href="how-it-works.html">how it works_authorized</a></li>
+                            <li><a href="how-it-works.html">how it works_authorized ✔</a></li>
                             <li><a href="where-find.html">1440 where find us_authorized</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="faq.html">FAQ ✔</a></li>
                             <li><a href="testimonials.html">testimonials</a></li>
                         </ul>
                     </li>
+                    <li><a href="contacts.html">contacts ✔</a></li>
                     <li><a href="blog.html">blog ???</a></li>
                     <li><a href="blog-single.html">blog-single</a></li>
                     <li><a href="single-page.html">single-page</a></li>
@@ -121,12 +122,10 @@
                     <li><a href="profile-5.html">1440 profile 5: referral program</a></li>
                 </ul>
                 <ul>
-                    <li><a href="404.html">404</a></li>
+                    <li><a href="404.html">404 ✔</a></li>
                 </ul>
             </div>
             <div class="col-lg-6 col-xl-4">
-
-
                 <h1>Lorem ipsum.</h1>
                 <h2>Lorem ipsum.</h2>
                 <h3>Lorem ipsum.</h3>
@@ -140,3 +139,4 @@
     </div>
 </main>
 @@include('templates/footer.html')
+@@include('templates/footer-assets.html')
