--- a/dev/services-main.html
+++ b/dev/services-main.html
@@ -1,7 +1,8 @@
 @@include('templates/head.html')
 @@include('templates/header.html')
-<main class="wrapper">
-    new page
+<main class="wrapper page-main-services">
+   
+    @@include('templates/services-list.html')
 </main>
 @@include('templates/footer.html')
 @@include('templates/footer-assets.html')
