--- a/dev/sign-up.html
+++ b/dev/sign-up.html
@@ -1,12 +1,10 @@
 @@include('templates/head.html')
-@@include('templates/header.html')
 <main class="wrapper page-login">
     <div class="column-logo">
         <a href="index.html">
             <img src="assets/img/logo-dark.svg" alt="logo">
         </a>
     </div>
-    
     <form class="template-form">
         <button id="history-back" class="btn btn-profile" type="button">
             <svg>
@@ -15,7 +13,6 @@
         </button>
         <h3 class="template-form__title">cтворити акаунт</h3>
         <h6 class="template-form__subtitle">Для успішного проходження реєстрації заповніть поля, вказані нижче</h6>
-        
         <div class="input-row">
             <div class="input-box">
                 <label for="name">ім’я</label>
@@ -42,7 +39,6 @@
             <label for="password">пароль</label>  
             <input id="password" type="password" placeholder="Password">
         </div>
-
         <div class="conrol-box">
             <input id="consent" type="checkbox">
             <label for="consent">Я погоджуюся з <a href="#">умовами користування</a> та <a href="#">політикою конфіденційності</a></label>
@@ -52,7 +48,6 @@
         </div>
         <div class="template-form__questions">вже маєте акаунт Onebit? <a href="sign-in.html">увійти</a></div>
     </form>
- 
 </main>
-@@include('templates/footer.html')
+@@include('templates/footer-assets.html')
  
