--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,6 @@
 @@include('templates/head.html')
 @@include('templates/header.html')
-<main class="wrapper home">
+<main class="wrapper page-home">
     @@include('templates/first-screen.html') 
     @@include('templates/advantages.html')
     @@include('templates/steps.html')
@@ -10,4 +10,5 @@
     @@include('templates/questions.html')   
 </main>
 @@include('templates/footer.html')
+@@include('templates/footer-assets.html')
  
